squish issue and missing incog
Fixed squish issue by using id for the body tag, and removed condition that excludes active tab from the open tab list to fix missing active tabs.

--- a/Extension samples/URLCollector/popup/styles.css
+++ b/Extension samples/URLCollector/popup/styles.css
@@ -1,4 +1,4 @@
-body {
+#extension-body {
     width: 500px;
     height: 400px;
     margin: 1em;
